--- a/companion/targets/windows/companion9x-msys.nsi.in
+++ b/companion/targets/windows/companion9x-msys.nsi.in
@@ -6,7 +6,7 @@
 ;Include Modern UI
 
   !include "MUI2.nsh"
-  !include "@CMAKE_CURRENT_SOURCE_DIR@\..\winbuild\FileAssociation.nsh"
+  !include "@CMAKE_CURRENT_SOURCE_DIR@\..\targets\windows\FileAssociation.nsh"
 
 ;--------------------------------
 ;General
@@ -41,7 +41,7 @@
 ;--------------------------------
 ;Pages
 
-  !insertmacro MUI_PAGE_LICENSE "@CMAKE_CURRENT_SOURCE_DIR@\..\winbuild\license.txt"
+  !insertmacro MUI_PAGE_LICENSE "@CMAKE_CURRENT_SOURCE_DIR@\..\targets\windows\license.txt"
   !insertmacro MUI_PAGE_COMPONENTS
   !insertmacro MUI_PAGE_DIRECTORY
   
@@ -80,7 +80,7 @@ Section "companion9x" SecDummy
 
   SetOutPath "$INSTDIR"
   
-  File "@CMAKE_CURRENT_SOURCE_DIR@\..\winbuild\license.txt"
+  File "@CMAKE_CURRENT_SOURCE_DIR@\..\targets\windows\license.txt"
   File "companion9x.exe"
   File "C:\Programs\xerces\src\.libs\libxerces-c-3-1.dll"
   File "C:\MinGW\bin\libgcc_s_dw2-1.dll"
@@ -91,10 +91,10 @@ Section "companion9x" SecDummy
   File "@QT_BINARY_DIR@\QtXml4.dll"
   File "@QT_BINARY_DIR@\QtNetwork4.dll"
   File "@QT_BINARY_DIR@\Phonon4.dll"
-  File "@CMAKE_CURRENT_SOURCE_DIR@\..\winbuild\avrdude.exe"
-  File "@CMAKE_CURRENT_SOURCE_DIR@\..\winbuild\avrdude.conf"
-  File "@CMAKE_CURRENT_SOURCE_DIR@\..\winbuild\libusb0.dll"
-  File "@CMAKE_CURRENT_SOURCE_DIR@\..\winbuild\dfu-util.exe"
+  File "@CMAKE_CURRENT_SOURCE_DIR@\..\targets\windows\avrdude.exe"
+  File "@CMAKE_CURRENT_SOURCE_DIR@\..\targets\windows\avrdude.conf"
+  File "@CMAKE_CURRENT_SOURCE_DIR@\..\targets\windows\libusb0.dll"
+  File "@CMAKE_CURRENT_SOURCE_DIR@\..\targets\windows\dfu-util.exe"
   
   CreateDirectory "$INSTDIR\lang"
   SetOutPath "$INSTDIR\lang"
