CN - 1) Added support for requiring the SwH (AKA Trainer)  switch to be ON before enabling the range test. This  feature may be enabled/disabled in the main setup menu and  will apply to all models. When enabled, a popup box appears  when the range test feature is turned on that prompts the  user to turn the Tranier switch ON to enable the range  test. Added so that the user is less likely to leave the  range test feature on by accident, and also allows the user  to easily switch the range test on and off. Only included  when PCB=TARANIS. Set the compile time option  SWH_RANGE_TEST=YES to include this functionality. Could be  used to resolve issue #159. 2) Added support for including '\n' characters in popup box  messages. Used by the SWH_RANGE_TEST option when displaying  the range test enable prompt.

--- a/src/Makefile
+++ b/src/Makefile
@@ -246,6 +246,12 @@ GVARS = NO
 # Values = NO, POT1, POT2, POT3,
 3POS = NO
 
+# Enable support for newlines in strings output to the LCD (allows multi-line popup box message)
+PUTS_NEWLINE_SUPPORT = NO
+
+# Enable support for requiring the SwH switch to be on before enabling the range test (PCBTARANIS only)
+SWH_RANGE_TEST = NO
+
 #------- END BUILD OPTIONS ---------------------------
 
 # Define programs and commands.
@@ -964,6 +970,14 @@ endif
 ifeq ($(3POS), POT3)
   CPPDEFS += -DEXTRA_3POS=3
   # EEPROM_VARIANT += ${3POS_VARIANT}
+endif
+
+ifeq ($(PUTS_NEWLINE_SUPPORT), YES)
+  CPPDEFS += -DPUTS_NEWLINE_SUPPORT
+endif
+
+ifeq ($(SWH_RANGE_TEST), YES)
+  CPPDEFS += -DSWH_RANGE_TEST
 endif
 
 #---------------- Compiler Options C++ ----------------
