--- a/companion/src/translations.qrc.in
+++ b/companion/src/translations.qrc.in
@@ -1,12 +1,12 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource prefix="/">
-        <file>companion9x_fr.qm</file>
-        <file>companion9x_de.qm</file>
-        <file>companion9x_he.qm</file>
-        <file>companion9x_it.qm</file>
-        <file>companion9x_pt.qm</file>
-        <file>companion9x_ru.qm</file>
-        <file>companion9x_sv.qm</file>
-        <file>companion9x_cs.qm</file>
+        <file>companion_fr.qm</file>
+        <file>companion_de.qm</file>
+        <file>companion_he.qm</file>
+        <file>companion_it.qm</file>
+        <file>companion_pt.qm</file>
+        <file>companion_ru.qm</file>
+        <file>companion_sv.qm</file>
+        <file>companion_cs.qm</file>
     </qresource>
 </RCC>
