Fixed Linux desktop file, which was badly broken. Added more and better icons to propper locations.

--- a/companion/src/companion.desktop
+++ b/companion/src/companion.desktop
@@ -2,10 +2,10 @@
 Type=Application
 Encoding=UTF-8
 Name=Companion
-GenericName=COMPANION
-Comment=The ultimate transmitter companion
-Icon=/usr/share/icons/companion9x.png
-Exec='companion9x'
+GenericName=Transmitter Companion App
+Comment=The Ultimate Transmitter Companion
+Icon=companion
+Exec='companion'
 Terminal=false
 StartupNotify=false
 Categories=Application
