make clean now removes all .o files

--- a/radio/src/Makefile
+++ b/radio/src/Makefile
@@ -1299,12 +1299,7 @@ clean_list :
 	$(REMOVE) $(TARGET).lss
 	$(REMOVE) $(TARGET).lst
 	$(REMOVE) $(SRC:.c=.s)
-	$(REMOVE) *.o
-	$(REMOVE) */*.o
-	$(REMOVE) */*/*.o
-	$(REMOVE) */*/*/*.o
-	$(REMOVE) */*/*/*/*.o
-	$(REMOVE) */*/*/*/*/*.o
+	$(REMOVE) `find . -name "*.o"` 
 	$(REMOVE) *.d
 	$(REMOVE) *.lst
 	$(REMOVE) allsrc.cpp
