Contributor dialog fixed

--- a/companion/src/CMakeLists.txt
+++ b/companion/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT( companion9x )
 
 SET( C9X_VERSION_MAJOR "1" )
-SET( C9X_VERSION_MINOR "51" )
+SET( C9X_VERSION_MINOR "52" )
 SET( C9X_VERSION ${C9X_VERSION_MAJOR}.${C9X_VERSION_MINOR} )
 
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
@@ -39,6 +39,7 @@ ENDIF()
 FIND_PACKAGE( Qt4 REQUIRED )
 SET( QT_USE_QTNETWORK True )
 SET( QT_USE_QTXML True )
+SET( QT_USE_QTWEBKIT True )
 INCLUDE( ${QT_USE_FILE} )
 
 IF ( APPLE )
