Support of inputs / mixes from 'next' continued. More duplicated code removed.

--- a/companion/src/firmwares/opentx/stamp-opentx.h.in
+++ b/companion/src/firmwares/opentx/stamp-opentx.h.in
@@ -2,5 +2,5 @@
 #define DATE_STR  "@DATE@"
 #define TIME_STR  "@TIME@"
 #define VERS_STR  "c9x"
-#define SVN_STR   "@FIRMWARE@-r@G9X_WC_REVISION@"
+#define VERS_STR  "@FIRMWARE@-r@G9X_WC_REVISION@"
 #define MOD_STR   "FH"
