--- a/radio/src/Makefile
+++ b/radio/src/Makefile
@@ -1110,50 +1110,42 @@ taranis-stamp:
 
 translations/cz.h: translations/cz.h.txt
 	@echo
-	@echo "Create language specific header files"
-	@echo "Czech"
+	@echo "Create Czech language specific header files"
 	$(TRANSLATE) translations/cz.h.txt translations/cz.h cz
 
 translations/de.h: translations/de.h.txt  
 	@echo
-	@echo "Create language specific header files"
-	@echo "German"
+	@echo "Create German language specific header files"
 	$(TRANSLATE) translations/de.h.txt translations/de.h de
 
 translations/es.h: translations/es.h.txt 
 	@echo
-	@echo "Create language specific header files"
-	@echo "Spanish"
+	@echo "Create Spanish language specific header files"
 	$(TRANSLATE) translations/es.h.txt translations/es.h es
 
 translations/fr.h: translations/fr.h.txt 
 	@echo
-	@echo "Create language specific header files"
-	@echo "French"
+	@echo "Create French language specific header files"
 	$(TRANSLATE) translations/fr.h.txt translations/fr.h fr
 
 translations/it.h: translations/it.h.txt 
 	@echo
-	@echo "Create language specific header files"
-	@echo "Italian"
+	@echo "Create Italian language specific header files"
 	$(TRANSLATE) translations/it.h.txt translations/it.h it
 
 translations/pl.h: translations/pl.h.txt 
 	@echo
-	@echo "Create language specific header files"
-	@echo "Polish"
+	@echo "Create Polish language specific header files"
 	$(TRANSLATE) translations/pl.h.txt translations/pl.h pl
 
 translations/pt.h: translations/pt.h.txt
 	@echo
-	@echo "Create language specific header files"
-	@echo "Portugese"
+	@echo "Create Portugese language specific header files"
 	$(TRANSLATE) translations/pt.h.txt translations/pt.h pt
 
 translations/se.h: translations/se.h.txt 
 	@echo
-	@echo "Create language specific header files"
-	@echo "Swedish"
+	@echo "Create Swedish language specific header files"
 	$(TRANSLATE) translations/se.h.txt translations/se.h se
 
 .PHONY: fonts
