Issue #469 fixed (Telemetry tab in Companion rewritten - 20% code removed). More tests needed!

--- a/companion/src/modeledit/CMakeLists.txt
+++ b/companion/src/modeledit/CMakeLists.txt
@@ -42,6 +42,7 @@ set(modeledit_UIS
   setup_module.ui
   flightmode.ui
   telemetry_analog.ui
+  telemetry_customscreen.ui
 )
 
 foreach(name ${modeledit_NAMES})
