--- a/companion/src/translations.qrc.in
+++ b/companion/src/translations.qrc.in
@@ -4,6 +4,7 @@
         <file>companion_de.qm</file>
         <file>companion_he.qm</file>
         <file>companion_it.qm</file>
+        <file>companion_pl.qm</file>
         <file>companion_pt.qm</file>
         <file>companion_ru.qm</file>
         <file>companion_sv.qm</file>
