Two new dialogs defined.

--- a/companion/src/CMakeLists.txt
+++ b/companion/src/CMakeLists.txt
@@ -156,6 +156,8 @@ SET( companion_SRCS
      mountlist.cpp 
      avroutputdialog.cpp
      preferencesdialog.cpp
+     apppreferencesdialog.cpp
+     fwpreferencesdialog.cpp
      burnconfigdialog.cpp
      comparedialog.cpp
      contributorsdialog.cpp
@@ -177,6 +179,8 @@ SET( companion_SRCS
 SET( companion_MOC_HDRS
      avroutputdialog.h
      preferencesdialog.h
+     apppreferencesdialog.h
+     fwpreferencesdialog.h
      burnconfigdialog.h
      comparedialog.h
      printdialog.h
@@ -211,6 +215,8 @@ SET( companion_UIS
      fusesdialog.ui
      logsdialog.ui
      preferencesdialog.ui
+     apppreferencesdialog.ui
+     fwpreferencesdialog.ui
      simulatordialog.ui
      xsimulatordialog.ui
      burnconfigdialog.ui
