--- a/companion/src/CMakeLists.txt
+++ b/companion/src/CMakeLists.txt
@@ -80,11 +80,14 @@ IF( Subversion_FOUND )
   # Subversion_WC_INFO( ${PROJECT_SOURCE_DIR} C9X )
 ENDIF( )
 
+set(RADIO_SRC_DIRECTORY ${PROJECT_SOURCE_DIR}/../../radio/src)
+
 include_directories(
   ${CMAKE_CURRENT_BINARY_DIR}
-  ${PROJECT_SOURCE_DIR}/../..
-  ${PROJECT_SOURCE_DIR}/../../radio/src/fonts/std
-  ${PROJECT_SOURCE_DIR}/../../radio/src/lua/src
+  ${RADIO_SRC_DIRECTORY}/../..
+  ${RADIO_SRC_DIRECTORY}
+  ${RADIO_SRC_DIRECTORY}/fonts/std
+  ${RADIO_SRC_DIRECTORY}/lua/src
 )
 
 set(TH9X_CHECKOUT_DIRECTORY ${PROJECT_BINARY_DIR}/firmwares/th9x)
@@ -113,8 +116,6 @@ add_custom_command(
   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/firmwares/ersky9x/ersky9xsimulator.cpp ${ERSKY9X_CHECKOUT_DIRECTORY}
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/firmwares/ersky9x/ersky9xsimulator.cpp
 )
-
-set(RADIO_SRC_DIRECTORY ${PROJECT_SOURCE_DIR}/../../radio/src)
 
 add_custom_command(
   OUTPUT ${RADIO_SRC_DIRECTORY}/bitmaps/sticks.lbm
@@ -305,7 +306,6 @@ ENDIF( )
 
 INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
 INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )
-
 
 SET( LANGUAGES he pl pt ru de fr it sv cs )
 FOREACH( language ${LANGUAGES} )
