Logical Switches import issue (Telemetry)

--- a/radio/src/.gitignore
+++ b/radio/src/.gitignore
@@ -1,7 +1,6 @@
 /stamp-opentx.h
 /opentx.elf
 /simu
-/eeprom.bin
 /opentx.hex
 /opentx.map
 /simu.d
@@ -9,6 +8,7 @@
 /*.sh
 /*.o
 /*.bin
+/*.bin.*
 /*.lst
 /SCRIPTS
 /SOUNDS
