--- a/companion/src/CMakeLists.txt
+++ b/companion/src/CMakeLists.txt
@@ -304,7 +304,7 @@ ENDIF( )
 INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
 INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )
 
-SET( LANGUAGES he pl pt ru de fr it sv cs )
+SET( LANGUAGES he pl pt ru de fr it sv cs fi)
 FOREACH( language ${LANGUAGES} )
   SET( companion_TS ${companion_TS} translations/companion_${language}.ts )
 ENDFOREACH( language )
